@@ -1,6 +1,8 @@
 -----2.7-----
 New features:
 	* Allow to move objects (drag&drop) to different folders in the project explorer
+	* If a column values were calculated via a formula, update the values on data changes in the dependent variable columns
+	* [spreadsheet] allow to insert multiple rows and columns in one step
 
 UX improvements:
 	* Improved the selection of curves in the plot that are near to or behind each other
